--- a/source/sass/components/main-products.scss
+++ b/source/sass/components/main-products.scss
@@ -1,6 +1,18 @@
 @use "../base/variables" as *;
 @use "../base/mixin" as mix;
 
+.main-products__inner {
+  @media (min-width: $tablet-width) {
+    margin: 0 auto;
+    width: calc(100% - 60px);
+  }
+
+  @media (min-width: $desktop-width) {
+    width: calc(100% - 220px);
+    max-width: $desktop-width;
+  }
+}
+
 .main-products__product-list {
   @include mix.list-reset;
 }
