--- a/source/sass/components/product-card-main.scss
+++ b/source/sass/components/product-card-main.scss
@@ -2,21 +2,29 @@
 $plus-icon-color: #d3d3d3;
 
 .product-card-main {
+  padding: 0 36px 39px;
+  background-color: $bg-color-extra;
   line-height: 14px;
 
   @media (max-width: $tablet-width) {
+    background-color: transparent;
+    padding: 20px 0;
     border: 1px solid $border-color-third;
   }
 
   &--more {
+    background-color: transparent;
     display: flex;
+
+    @media (min-width: $tablet-width) {
+      border: 2px solid $bg-color-extra;
+    }
   }
 }
 
 .product-card-main__wrapper {
   flex-grow: 1;
   display: grid;
-  padding: 20px 0;
   grid-template-columns: 1fr;
 
   @media (max-width: $tablet-width) {
@@ -29,8 +37,6 @@ $plus-icon-color: #d3d3d3;
 
   @media (min-width: $tablet-width) {
     position: relative;
-    padding: 160px 36px 39px;
-    background-color: $bg-color-extra;
   }
 
   &--more {
@@ -39,7 +45,6 @@ $plus-icon-color: #d3d3d3;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 80px 0 25px;
 
     &::before {
       position: absolute;
@@ -65,9 +70,6 @@ $plus-icon-color: #d3d3d3;
 
     @media (min-width: $tablet-width) {
       flex-grow: 1;
-      padding: 160px 38px 38px;
-      background-color: transparent;
-      outline: 2px solid $bg-color-extra;
 
       &::before {
         width: 60px;
@@ -122,7 +124,7 @@ $plus-icon-color: #d3d3d3;
   @media (min-width: $tablet-width) {
     width: 100%;
     justify-self: center;
-    margin: 0 0 21px 0;
+    margin: 160px 0 21px 0;
 
     font-size: 20px;
     line-height: 24px;
