Исправление вещей, несоответствующих макету

--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -28,8 +28,8 @@ $border-color-focus: #444444;
 
 
 // Font
-$font: "Lato", sans-serif;
-$font-secondary: "Oswald", sans-serif;
+$font: "Lato", "Tahoma", sans-serif;
+$font-secondary: "Oswald", "Tahoma", sans-serif;
 
 // Widths
 $tablet-width: 768px;
