--- a/source/sass/components/main-container.scss
+++ b/source/sass/components/main-container.scss
@@ -24,7 +24,7 @@
   display: grid;
   grid-template-columns: 1fr;
   row-gap: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 23px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 45px;
@@ -63,13 +63,11 @@
     @media (min-width: $tablet-width) {
       font-size: 60px;
       line-height: 60px;
-      margin: 27px 0 145px 0;
-      text-align: center;
+      margin: 50px 0 82px 0;
     }
 
     @media (min-width: $desktop-width) {
       margin: 0 0 84px 0;
-      text-align: start;
     }
   }
 
@@ -80,7 +78,7 @@
     @media (min-width: $tablet-width) {
       font-size: 60px;
       line-height: 60px;
-      margin-top: 65px;
+      margin-top: 50px;
       margin-bottom: 54px;
       padding: 0 40px;
     }
@@ -101,7 +99,11 @@
   }
 
   @media (min-width: $tablet-width) {
-    margin: 0 0 76px 0;
+    margin: 0 0 65px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 75px 0;
   }
 }
 
