--- a/source/sass/components/address.scss
+++ b/source/sass/components/address.scss
@@ -14,15 +14,17 @@
   padding: 26px 0;
 
   @media (min-width: $tablet-width) {
-    padding: 56px 40px;
+    padding: 56px 40px 63px;
   }
 
   @media (min-width: $desktop-width) {
     position: absolute;
-    background-color: $bg-color;
     top: 95px;
     left: 0;
-    width: 47%;
+    padding: 60px 80px 58px;
+    gap: 75px;
+
+    background-color: $bg-color;
   }
 }
 
@@ -55,6 +57,10 @@
     width: 160px;
     font-size: 16px;
     line-height: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: start;
   }
 }
 
