--- a/source/sass/components/example-cat.scss
+++ b/source/sass/components/example-cat.scss
@@ -5,7 +5,7 @@
 
   @media (min-width: $tablet-width) {
     background-color: transparent;
-    background-image: linear-gradient($bg-color 58%, $bg-color-secondary 58%);
+    background-image: linear-gradient($bg-color 56%, $bg-color-secondary 56%);
   }
 
   @media (min-width: $desktop-width) {
@@ -14,7 +14,7 @@
 }
 
 .example-cat__container {
-  padding: 32px 0 40px;
+  padding: 25px 0 36px;
   display: grid;
   grid-template-columns: 1fr;
 
@@ -25,7 +25,7 @@
 
   @media (min-width: $desktop-width) {
     padding: 0 0 75px 0;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 560px;
   }
 }
 
@@ -39,7 +39,7 @@
   @media (min-width: $tablet-width) {
     font-size: 60px;
     line-height: 60px;
-    margin: 0 0 63px 0;
+    margin: 0 0 60px 0;
   }
 
   @media (min-width: $desktop-width) {
@@ -75,7 +75,7 @@
     grid-column: 1 / 3;
     justify-content: start;
     gap: 42px;
-    margin: 0 0 100px 0;
+    margin: 0 0 105px 0;
   }
 
   @media (min-width: $desktop-width) {
@@ -108,7 +108,7 @@
 
   @media (min-width: $tablet-width) {
     width: 130px;
-    bottom: -5px;
+    bottom: -9px;
 
     font-size: 14px;
     line-height: 14px;
@@ -182,7 +182,14 @@
 .example-cat__line-break {
   display: none;
 
-  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
+  @media (min-width: $tablet-width) {
     display: block;
+    height: 9px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: inline-block;
+    height: 0;
+    width: 63px;
   }
 }
