--- a/source/sass/components/guide.scss
+++ b/source/sass/components/guide.scss
@@ -39,8 +39,8 @@
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 2fr 2fr;
-    column-gap: 153px;
-    row-gap: 40px;
+    column-gap: 60px;
+    row-gap: 37px;
     align-items: start;
   }
 
@@ -58,7 +58,8 @@
 
   @media (min-width: $tablet-width) {
     grid-column: auto;
-    padding: 150px 121px 57px 0;
+    padding: 150px 0 57px;
+    min-height: 280px;
 
     &::after {
       z-index: -1;
@@ -77,7 +78,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 150px 22px 0 0;
+    padding: 150px 0 0 0;
   }
 
   &::before {
@@ -157,5 +158,6 @@
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 24px;
+    max-width: 245px;
   }
 }
