--- a/source/sass/components/map.scss
+++ b/source/sass/components/map.scss
@@ -6,7 +6,7 @@
 
 .map__image {
   width: 100%;
-  object-fit: cover;
+  height: 362px;
 
   @media (min-width: $tablet-width) {
     height: 400px;
