--- a/source/sass/components/product-card-additional.scss
+++ b/source/sass/components/product-card-additional.scss
@@ -3,7 +3,7 @@
 .product-card-additional {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 15px;
+  gap: 13px;
   padding: 13px 0 19px 0;
   align-items: center;
 
@@ -14,6 +14,11 @@
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr 1fr;
     padding: 26px 38px 28px;
+    gap: 24px;
+  }
+
+  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
+    border: 1px solid $border-color-secondary;
   }
 
   @media (min-width: $desktop-width) {
@@ -38,10 +43,18 @@
 }
 
 .product-card-additional__product-details {
+  margin: 0;
   display: flex;
   justify-content: space-between;
 
+  font-size: 14px;
+  line-height: 14px;
   color: $font-color-secondary;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+  }
 
   @media (min-width: $tablet-width) and (max-width: $desktop-width) {
     justify-content: end;
@@ -49,7 +62,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    min-width: 250px;
+    min-width: 285px;
     margin: 0 0 0 auto;
   }
 }
@@ -79,6 +92,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin: 0 0 0 40px;
+    margin: 0 0 0 15px;
+    padding: 10px 92px;
   }
 }
