--- a/source/sass/components/product-card-main.scss
+++ b/source/sass/components/product-card-main.scss
@@ -2,14 +2,16 @@
 $plus-icon-color: #d3d3d3;
 
 .product-card-main {
-  padding: 0 36px 39px;
-  background-image: linear-gradient($bg-color 16%, $bg-color-extra 16%);
-  line-height: 14px;
+  background-image: none;
+  padding: 20px 0;
+  border: 1px solid $border-color-third;
+  min-height: 209px;
 
-  @media (max-width: $tablet-width) {
-    background-image: none;
-    padding: 20px 0;
-    border: 1px solid $border-color-third;
+  @media (min-width: $tablet-width) {
+    padding: 0 36px 39px;
+    background-image: linear-gradient($bg-color 16%, $bg-color-extra 16%);
+    line-height: 14px;
+    border: none;
   }
 
   &--more {
@@ -23,25 +25,23 @@ $plus-icon-color: #d3d3d3;
 }
 
 .product-card-main__wrapper {
-  flex-grow: 1;
   display: grid;
-  grid-template-columns: 1fr;
-
-  @media (max-width: $tablet-width) {
-    width: calc(100% - 40px);
-    margin: 0 auto;
-
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr min-content;
-  }
+  width: calc(100% - 40px);
+  margin: 0 auto;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr min-content;
 
   @media (min-width: $tablet-width) {
+    width: 100%;
+    margin: 0;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
     position: relative;
   }
 
   &--more {
     position: relative;
-
+    padding: 60px 0 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -69,7 +69,7 @@ $plus-icon-color: #d3d3d3;
     }
 
     @media (min-width: $tablet-width) {
-      padding: 0 38px 38px;
+      padding: 155px 38px 38px;
       border: 2px solid $bg-color-extra;
       flex-grow: 1;
 
@@ -87,19 +87,18 @@ $plus-icon-color: #d3d3d3;
 }
 
 .product-card-main__image-link {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+
   display: flex;
   justify-content: center;
-  align-items: center;
-
-  @media (max-width: $tablet-width) {
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
-  }
+  align-items: end;
 
   @media (min-width: $tablet-width) {
+    grid-row: auto;
+    grid-column: auto;
     margin: 0 0 34px 0;
     height: 208px;
-    align-items: end;
   }
 
   @media (min-width: $desktop-width) {
@@ -133,24 +132,26 @@ $plus-icon-color: #d3d3d3;
 
 
   &--more {
-    margin: 57px 0 8px 0;
+    width: 100%;
+    margin: 0 0 10px 0;
 
     text-align: center;
 
     @media (min-width: $tablet-width) {
-      margin: 161px 0 23px 0;
+      margin: 0 0 23px 0;
     }
   }
 }
 
 .product-card-main__product-details {
+  margin: 0;
   display: grid;
   grid-template-columns: 1fr;
-  row-gap: 6px;
   color: $font-color-secondary;
+  align-content: start;
 
   @media (min-width: $tablet-width) {
-    row-gap: 14px;
+    row-gap: 16px;
   }
 }
 
@@ -175,7 +176,7 @@ $plus-icon-color: #d3d3d3;
 
 .product-card-main__termin {
   font-size: 12px;
-  line-height: 16px;
+  line-height: 15px;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
@@ -187,7 +188,7 @@ $plus-icon-color: #d3d3d3;
   margin: 0;
 
   font-size: 12px;
-  line-height: 16px;
+  line-height: 15px;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
@@ -208,7 +209,7 @@ $plus-icon-color: #d3d3d3;
 }
 
 .product-card-main__link {
-  margin: 13px 0 0 0;
+  margin: 8px 0 0 0;
   grid-column: 1 / -1;
   padding: 10px 0;
 
@@ -216,7 +217,7 @@ $plus-icon-color: #d3d3d3;
   line-height: 20px;
 
   @media (min-width: $tablet-width) {
-    margin: 33px 0 0 0;
+    margin: 42px 0 0 0;
   }
 
   &--more {
