--- a/source/sass/components/site-list.scss
+++ b/source/sass/components/site-list.scss
@@ -15,7 +15,7 @@
   background-color: $bg-color;
 
   @media (min-width: $tablet-width) {
-    padding: 18px 17px 12px;
+    padding: 18px 0 12px;
     border: none;
     background-color: transparent;
   }
@@ -28,7 +28,7 @@
       content: "";
       width: 100%;
       height: 2px;
-      bottom: -12px;
+      bottom: -6px;
       left: 0;
       background-color: $bg-color-accent;
     }
