--- a/source/sass/components/social.scss
+++ b/source/sass/components/social.scss
@@ -7,6 +7,10 @@ $icon-color: #666666;
   display: flex;
   justify-content: center;
   padding: 20px 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
 }
 
 .social__list {
